[package]
name = "add-user-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.14"
lambda_http = "0.13.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full", "macros"] }
flate2 = "1.0.35"
aws-sdk-dynamodb = "1.61.0"