[package]
name = "add-user-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.14"
aws-sdk-dynamodb = "1.61.0"
flate2 = "1.0.35"
lambda_http = "0.13.0"
lambda_runtime = "0.13.0"
pokemon-showdown-user-stats-model = "0.1.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = "1.0.217"
serde_json = "1.0"
serde_derive = "1.0"
tokio = { version = "1", features = ["full", "macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }
