[package]
name = "get-user-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.14"
aws-sdk-dynamodb = "1.61.0"
base64 = "0.22.1"
flate2 = "1.0.35"
lambda_http = "0.13.0"
serde_json = "1.0"
tokio = { version = "1", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors"] }