[package]
name = "update-stats-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.14"
aws-sdk-s3 = "1.69.0"
aws_lambda_events = { version = "0.15.1", default-features = false, features = ["eventbridge"] }
flate2 = "1.0.35"

lambda_runtime = "0.13.0"
reqwest = "0.12.12"
serde = "1.0.217"
serde_json = "1.0.137"
tokio = { version = "1", features = ["macros"] }
