[package]
name = "update-stats"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.15"
aws-sdk-cloudwatch = "1.70.0"
aws-sdk-dynamodb = "1.63.0"
flate2 = "1.0"
pokemon-showdown-user-stats-model = "0.1.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full", "macros"] }
